# newshub

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  sources.example.json
backend/app/: config.py  extractor.py  fetcher.py  main.py  models.py  redis_client.py  sanitize.py  sources.py  sources_data.py  storage.py  worker.py
backend/app/api/: routes.py
backend/app/bot/: digest.py  main.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: ArticlePage.svelte  Filters.svelte  Header.svelte  NewsCard.svelte  api.js
